fix search page text layout and fonts

--- a/sections/search-template.liquid
+++ b/sections/search-template.liquid
@@ -245,6 +245,18 @@
   {% endpaginate %}
 </div>
 
+      <style>
+        .twelve > p{
+        	display:none;
+        }
+        br{
+        	display:none;
+        }
+        strong,
+        b{
+        	font-weight:400;
+        }
+      </style>
 
 {% schema %}
 
