--- a/sections/search-template.liquid
+++ b/sections/search-template.liquid
@@ -256,6 +256,10 @@
         b{
         	font-weight:400;
         }
+        /* removed images from search result */
+        .search-matrix .product_row > div:nth-child(2) img{
+        	display:none !important;
+        }
       </style>
 
 {% schema %}
