fix search result layout

--- a/sections/search-template.liquid
+++ b/sections/search-template.liquid
@@ -258,7 +258,16 @@
         }
         /* removed images from search result */
         .search-matrix .product_row > div:nth-child(2) img{
-        	display:none !important;
+        	display:none !important;          
+        }
+
+        /* fix search result layout */
+        .search-matrix .product_row > div:nth-child(2) dd,
+        .search-matrix .product_row > div:nth-child(2) ul,
+        .search-matrix .product_row > div:nth-child(2) div{
+        	width:100% !important;
+          	padding-left:0;
+          	margin-inline:0;
         }
       </style>
 
