--- a/snippets/product-images.liquid
+++ b/snippets/product-images.liquid
@@ -137,7 +137,7 @@ quickshop: <boolean>
     {% endfor %}
   </div>
 
-  {% if section.settings.product_thumbs %}
+    {% if section.settings.product_thumbs %}
     {% if image_width != 'full' %}
       <div class="product_gallery_nav
             product-gallery__thumbnails
@@ -167,4 +167,49 @@ quickshop: <boolean>
       </div>
     {% endif %}
   {% endif %}
+</div>
+
+
+           {% assign collection_handles = product.collections | map: 'handle' %}
+          {% assign variant = product.selected_or_first_available_variant %}
+            
+  
+  
+  
+  
+  <div style="justify-content: center; text-align:center; margin-bottom:20px" class="product product-{{ product.id }} product-name--{{ product.handle }} product_section js-product_section is-flex media-position--{{ section.settings.product_images_position }}" data-rv-handle="{{ product.handle }}">
+    {% if collection_handles contains 'coming-soon' %}
+      <p class="modal_price">{{ 'collections.general.coming_soon' | t }}</p>
+    {% else %}
+      <div class="modal_price">
+        {% unless product.available == false and settings.display_price == false %}
+          <div class="price__container price__container--display-price-{{ settings.display_price }} {% if settings.display_price %}has-margin-right{% endif %}">
+            <span content="{{ variant.price | money_without_currency | remove: "," }}" class="{% if variant.compare_at_price > variant.price %}sale{% endif %}">
+              <span class="current_price">
+                {% if variant.price > 0 %}
+                  <span class="money">{% render 'price-element', price: variant.price %}</span>
+                {% else %}
+                  {{ settings.free_price_text }}
+                {% endif %}
+              </span>
+            </span>
+            <span class="was_price">
+              {% if variant.price < variant.compare_at_price %}
+                <span class="money">{% render 'price-element', price: variant.compare_at_price %}</span>
+              {% endif %}
+            </span>
+            {% if section.settings.display_savings %}
+              <span class="sale savings">
+                {% if variant.price < variant.compare_at_price %}
+                  {{ 'products.product.savings' | t }}  {{ variant.compare_at_price | minus: variant.price | times: 100 | divided_by: variant.compare_at_price }}% 
+                {% endif %}
+              </span>
+          {% endif %}
+          </div>
+        {% endunless %}
+        <div class="sold-out__container">
+          <span class="sold_out">{% if variant.available == false %}{{ settings.sold_out_text }}{% endif %}</span>
+        </div>
+      </div>
+    {% endif %}
 </div>
